# qr-opencv-zbar

./: CMakeLists.txt  README.md  camera.cfg  main.cpp  qrzbar.cpp  qrzbar.hpp
include/: calculateoffset.hpp  qrzbar.hpp  socketcomm.hpp
src/: calculateoffset.cpp  main.cpp  qrzbar.cpp  socketcomm.cpp
test/: CMakeLists.txt
test/calculateoffset/: CMakeLists.txt  airspace.cfg  main.cpp
test/reportcamvalues/: CMakeLists.txt  main.cpp
